k8s/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: product-management
spec:
  host: product-management
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: X-User-Id
